<resources>
    <string name="app_name">Sportbelt</string>
    <string name="register">Register</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_password_confirm_hint">Password (Confirm)</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="accessibility_service_description">Sportbelt background service</string>
    <string name="start_sportbelt">Start</string>
    <string name="data">Data</string>
    <string name="save_data">Save Data</string>
    <string name="how_to_use">How To Use</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="back">Back</string>
    <string name="last_week">Past Week Gestures</string>
    <string name="skip_intro">SKIP INTRO</string>
    <string name="next">NEXT</string>
</resources>
